versioned_docs/version-6.0/client-api/creating-document-store.mdx
---
title: "Client API: Creating a Document Store"
hide_table_of_contents: true
sidebar_label: Creating Document Store
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Client API: Creating a Document Store
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">  

* **Creating a Document Store** is the _first step_ that a RavenDB client application needs to make when working with RavenDB.

* We recommend that your Document Store implement the [Singleton Pattern](https://csharpindepth.com/articles/Singleton) as demonstrated in 
the example code [below](../client-api/creating-document-store.mdx#creating-a-document-store---example).  
Creating more than one Document Store may be resource intensive, and one instance is sufficient for most use cases.  

* In this page:  
  * [Creating a Document Store - Configuration](../client-api/creating-document-store.mdx#creating-a-document-store---configuration)  
     * [Certificate Disposal](../client-api/creating-document-store.mdx#certificate-disposal)  
  * [Creating a Document Store - Example](../client-api/creating-document-store.mdx#creating-a-document-store---example)  
</Admonition>
## Creating a Document Store - Configuration

The following properties can be configured when creating a new Document Store:  
 
* **Urls** (required)  

    * An initial URLs list of your RavenDB cluster nodes that is used when the client accesses the database for the _first_ time.  

    * Upon the first database access, the client will fetch the [Database Group Topology](../studio/database/settings/manage-database-group.mdx) 
    from the first server on this list that it successfully connected to. An exception is thrown if the client fails to connect with neither 
    of the servers specified on this list. The URLs from the Database Group Topology will supersede this initial URLs list for any future 
    access to that database.  

    * **Note**: Do not create a Document Store with URLs that point to servers outside of your cluster.  

    * **Note**: This list is not binding. You can always modify your cluster later dynamically, add new nodes or remove existing ones as 
    necessary. Learn more in [Cluster View Operations](../studio/cluster/cluster-view.mdx#cluster-view-operations).  

* **[Database](../client-api/setting-up-default-database.mdx)** (optional)  
  The default database which the Client will work against.  
  A different database can be specified when creating a [Session](../client-api/session/opening-a-session.mdx) if needed.  

* **[Conventions](../client-api/configuration/conventions.mdx)** (optional)  
  Customize the Client behavior with a variety of options, overriding the default settings.  

* **[Certificate](../client-api/setting-up-authentication-and-authorization.mdx)** (optional)  
  X.509 certificate used to authenticate the client to the RavenDB server  

After setting the above configurations as necessary, call `.Initialize()` to begin using the Document Store.  

<Admonition type="warning" title="Warning">
The Document Store is immutable - all above configuration are frozen upon calling .Initialize().  
Create a new document store object if you need different default configuration values.  
</Admonition>

## Certificate Disposal

Starting with RavenDB `6.x`, disposing of a store automatically removes any X509Certificate2 certificate installed for 
it, to [prevent the accumulation of unneeded certificate files](https://snede.net/the-most-dangerous-constructor-in-net/).  

To **disable** the automatic disposal of certificates, please use the 
[DisposeCertificate](../client-api/configuration/conventions.mdx#disposecertificate) convention.  

<TabItem value="disable_certificate_cleanup" label="disable_certificate_cleanup">
<CodeBlock language="csharp">
{`// Set conventions as necessary (optional)
Conventions =
\{
    // Disable the automatic disposal of certificates when the store is disposed of
    DisposeCertificate = false
\},
`}
</CodeBlock>
</TabItem>  



## Creating a Document Store - Example

This example demonstrates how to implement the singleton pattern in the initialization of a Document Store, as well as how to set initial 
default configurations.

<TabItem value="document_store_holder" label="document_store_holder">
<CodeBlock language="csharp">
{`// The \`DocumentStoreHolder\` class holds a single Document Store instance.
public class DocumentStoreHolder
\{
    // Use Lazy<IDocumentStore> to initialize the document store lazily. 
    // This ensures that it is created only once - when first accessing the public \`Store\` property.
    private static Lazy<IDocumentStore> store = new Lazy<IDocumentStore>(CreateStore);

    public static IDocumentStore Store => store.Value;
    
    private static IDocumentStore CreateStore()
    \{
        IDocumentStore store = new DocumentStore()
        \{
            // Define the cluster node URLs (required)
            Urls = new[] \{ "http://your_RavenDB_cluster_node", 
                           /*some additional nodes of this cluster*/ \},

            // Set conventions as necessary (optional)
            Conventions =
            \{
                MaxNumberOfRequestsPerSession = 10,
                UseOptimisticConcurrency = true
            \},

            // Define a default database (optional)
            Database = "your_database_name",

            // Define a client certificate (optional)
            Certificate = new X509Certificate2("C:\\\\path_to_your_pfx_file\\\\cert.pfx"),

        // Initialize the Document Store
        \}.Initialize();

        return store;
    \}
\}
`}
</CodeBlock>
</TabItem>  




</LanguageContent>
<LanguageContent language="java">


To create an instance of the `DocumentStore` you need to specify a list of URL addresses that point to RavenDB server nodes.

<Admonition type="warning" title="Important" id="important" href="#important">
Do not open a `DocumentStore` using URL addresses that point to nodes outside your cluster.
</Admonition>

<TabItem value="document_store_creation" label="document_store_creation">
<CodeBlock language="java">
{`try (IDocumentStore store = new DocumentStore( new String[]\{ "http://localhost:8080" \}, "Northwind")) \{
    store.initialize();


\}
`}
</CodeBlock>
</TabItem>

This will instantiate a communication channel between your application and the local RavenDB server instance.

## Initialization

To be able to work on the `DocumentStore`, you will have to call the `initialize` method to get the fully initialized instance of `IDocumentStore`.

<Admonition type="note" title="Conventions" id="conventions" href="#conventions">

The conventions are frozen after `DocumentStore` initialization so they need to be set before `initialize` is called.

</Admonition>

## Singleton

Because the document store is a heavyweight object, there should only be one instance created per application (singleton). The document store is a thread safe object and its typical
initialization looks like the following:

<TabItem value="document_store_holder" label="document_store_holder">
<CodeBlock language="java">
{`public static class DocumentStoreHolder \{

    private static IDocumentStore store;

    static \{
        store = new DocumentStore(new String[]\{ "http://localhost:8080" \}, "Northwind");
    \}

    public static IDocumentStore getStore() \{
        return store;
    \}
\}
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">
If you use more than one instance of `DocumentStore` you should dispose it after use.
</Admonition>


</LanguageContent>
<LanguageContent language="nodejs">


To create an instance of the `DocumentStore` you need to specify a list of URL addresses that point to RavenDB server nodes.

<TabItem value="document_store_ctor" label="document_store_ctor">
<CodeBlock language="js">
{`new DocumentStore(urls, [database], [authOptions]);
`}
</CodeBlock>
</TabItem>

<Admonition type="warning" title="Important" id="important" href="#important">
Do not open a `DocumentStore` using URL addresses that point to nodes outside your cluster.
</Admonition>

<TabItem value="document_store_creation" label="document_store_creation">
<CodeBlock language="js">
{`const store = new DocumentStore(["http://localhost:8080"], "Northwind");
store.initialize();
`}
</CodeBlock>
</TabItem>

The above snippet is going to instantiate a communication channel between your application and the local RavenDB server instance.

## Initialization

A `DocumentStore` instance must be initialized before use by calling the `.initialize()` method.

<Admonition type="note" title="Conventions" id="conventions" href="#conventions">

After `DocumentStore` initialization, the conventions are frozen - modification attempts are going to result with error. Conventions need to be set *before* `.initialize()` is called.

</Admonition>

## Singleton

Because the document store is a heavyweight object, there should only be one instance created per application (a singleton - simple to achieve in Node.js by wrapping it in a module). Typical initialization of a document store looks as follows:

<TabItem value="document_store_holder" label="document_store_holder">
<CodeBlock language="js">
{`// documentStoreHolder.js
const store = new DocumentStore("http://localhost:8080", "Northwind");
store.initialize();
export \{ store as documentStore \}; 
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">
If you use more than one instance of `DocumentStore`, you should dispose it after use by calling its `.dispose()` method.
</Admonition>


</LanguageContent>

<!---
### Client API
- [What is a Document Store](../client-api/what-is-a-document-store)
- [Setting up Default Database](../client-api/setting-up-default-database)
- [Setting up Authentication and Authorization](../client-api/setting-up-authentication-and-authorization)
- [Conventions Overview](../client-api/configuration/conventions)
- [What is a Session and How Does it Work](../client-api/session/what-is-a-session-and-how-does-it-work)

### Session
- [What is a Session and How Does it Work](../client-api/session/what-is-a-session-and-how-does-it-work)

### Document Store
- [What is a Document Store](../client-api/what-is-a-document-store)
- [Setting up Default Database](../client-api/setting-up-default-database)
- [Setting up Authentication and Authorization](../client-api/setting-up-authentication-and-authorization)


-->